--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "thenameiswiiwin.github.io/design-solutions/",
+  "name": "design-solutions",
   "private": true,
   "version": "0.1.0",
   "scripts": {
